style.css
/* ... */
#slider-content {
	background: none repeat scroll 0 0 rgb(255, 255, 255);
	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.7);
	padding: 12px;
	display: inline-block;
	max-width: 40%;
	color: #777777;
}

.slider-wrap {
	position: relative;
}

.slider-wrap .displayblock {
	display: block;
}

.slider-wrap .displaynone {
	display: none;
}

/* =SLIDER CONTROLLERS
----------------------------------------------- */
#controllers {
	bottom: 15px;
	line-height: 0;
	position: absolute;
	text-align: center;
	width: 100%;
	z-index: 9999;
}

#controllers a {
	background-color: #ffffff;
	color: #ffffff;
	display: inline-block;
	height: 6px;
	margin: 0 4px;
	overflow: hidden;
	width: 18px;
}

#controllers a:hover, #controllers a.active {
	color: #ed564b;
	background-color: #ed564b;
}

/* =SLIDER width
----------------------------------------------- */

#featured-slider {
	width: 100%;
}

/* =PROMO BOX
----------------------------------------------- */
.promo-wrap {
	width: 70%;
	float: left;
}

#promo-box {
	background-color: #ed564b;
	color: #ffffff;
	padding-bottom: 23px;
	padding-top: 23px;
}

#promo-box a {
	color: #ffffff;
}

#promo-box a:hover {
	background: #ffffff;
	color: #2f3a34;
}

.promo-action {
	border: 1px solid #ffffff;
	border-radius: 3px;
	float: right;
	padding: 8px 20px;
	margin-top: 7px;
}

.promo-title {
	font-size: 28px;
	font-weight: bold;
	line-height: 30px;
	margin-bottom: 4px;
}

.promo-text {
	font-style: italic;
}

#colophon ul li {
	margin-bottom: 5px;
}

/* =Content
----------------------------------------------- */
.sticky {
}

.hentry {
	margin: 0 0 4.5em;
}

.byline,
.updated {
	display: none;
}

.single .byline,
.group-blog .byline {
	display: inline;
}

.page-content,
.entry-summary {
	margin: 1.5em 0 0;
}

.page-links {
	clear: both;
	margin: 0 0 1.5em;
}

.post .entry-content ul {
	list-style: square outside none;
}

#primary {
	float: left;
	width: 65.64%;
}

#primary .post {
	border-bottom: 1px solid #eeeeee;
	margin-bottom: 60px;
	padding-bottom: 15px;
}

.no-sidebar-full-width #primary {
	width: 100%;
}

.left-sidebar #primary {
	float: right;
}

.no-sidebar #primary {
	margin: 0 auto;
	float: none;
}

.left-sidebar #secondary {
	float: left;
}

#secondary {
	float: right;
	width: 31.28%;
}

#secondary .widget > ul > li {
	border-bottom: 1px dotted #777777;
}

#secondary .widget ul li {
	margin-bottom: 7px;
	line-height: 2;
}

#secondary .widget ul li ul li {
	margin-bottom: 0;
}

#content .post {
	padding-bottom: 25px;
	margin-bottom: 50px;
	border-bottom: 1px solid #eeeeee;
}

#recent-posts-3 li {
	border-bottom: 1px dotted #777777;
	margin-bottom: 7px;
}

.entry-content {
	padding-top: 15px;
}

.entry-content p {
	padding-bottom: 10px;
}

.single .entry-content {
	padding-top: 0;
}

.single #primary .post {
	border-bottom: medium none;
	margin-bottom: 20px;
	padding-bottom: 15px;
}

.related-posts-main-title {
	margin-bottom: 20px;
}

.related-posts-wrapper {
	margin-bottom: 30px;
}

.related-posts-wrapper .post-thumbnails {
	margin-bottom: 10px;
}

#content .related-posts-wrapper .entry-title {
	font-size: 22px;
	padding-bottom: 5px;
}

.related-posts-wrapper .entry-title a {
	color: #2c2c2c;
}

.related-posts-wrapper .entry-title a:hover {
	color: #ed564b;
}

.related-posts-wrapper .entry-meta {
	border: 0 none;
	padding: 0;
	font-size: 12px;
}

.related-posts-wrapper .entry-meta > span {
	padding-right: 10px;
}

.related-posts-wrapper .entry-meta i {
	padding-right: 5px;
}

.related-posts-wrapper .entry-meta a {
	color: inherit;
}

.error-404.not-found {
	text-align: center;
	padding-bottom: 20px;
}

.error-404 .page-title {
	font-size: 30px;
	line-height: 36px;
}

.blog-medium .entry-content {
	padding-top: 30px;
}

.no-sidebar-full-width,
.no-sidebar,
.no-sidebar-full-width #page,
.no-sidebar #page {
	overflow: hidden;
}

.no-sidebar-full-width .alignfull,
.no-sidebar .alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
}

.no-sidebar-full-width .alignwide,
.no-sidebar .alignwide {
	margin-left: -100px;
	margin-right: -100px;
	max-width: unset;
}

.no-sidebar-full-width .alignfull img,
.no-sidebar .alignfull img {
	max-width: unset;
}

/* =2,3,4 COLUMNS
----------------------------------------------- */
.tg-one-half {
	width: 48.46625%;
}

.tg-one-third {
	width: 31.288344%;
}

.tg-one-fourth {
	width: 22.699387%;
}

.one-sixth {
	width: 14.110%;
}

.tg-one-half,
.tg-one-third,
.tg-one-fourth,
.one-fifth,
.one-sixth {
	float: left;
	margin-right: 3.067485%;
}

.tg-one-half-last,
.tg-one-third-last,
.tg-one-fourth-last {
	float: right;
	margin-right: 0;
}

/* author bio
----------------------------------------------- */

.author-box {
	border: 1px solid #e8e8e8;
	padding: 20px;
	background: #f8f8f8;
	margin-bottom: 20px;
}

.author-img {
	float: left;
	width: 80px;
	margin-right: 18px;
}

.avatar {
	border-radius: 50%;
}

.author-description-wrapper h4 {
	clear: initial;
}

/* =WIDGET
----------------------------------------------- */
.widget {
	margin: 0 0 1.5em;
}

.widget-home {
	margin-bottom: 45px;
}

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

.widget-title {
	color: #2c2c2c;
	padding-bottom: 15px;
	font-size: 20px;
	font-size: 18px;
}

.widget ul li a {
	color: #909294;
}

.widget ul li a:hover {
	color: #ed564b;
}

.widget .clients img {
	border: 1px solid #cccccc;
}

.widget ul li a:before {
	font-family: fontawesome;
	content: "\f105";
	padding-right: 5px;
}

.widget ul li a:hover:before {
	color: #ed564b;
}

.widget-wrap {
	padding-top: 32px;
}

#colophon .widget-title {
	color: #e0e0e0;
	text-transform: uppercase;
	padding-bottom: 15px;
}

#colophon .widget a {
	color: #909294;
}

#secondary .widget-title span, #colophon .widget-title span {
	border-bottom: 2px solid #ed564b;
	text-transform: uppercase;
	padding-bottom: 4px;
}

#colophon .widget > ul > li, #colophon div > ul > li {
	border-bottom: 1px dotted #777777;
}
/* ... */

